--- a/index.html
+++ b/index.html
@@ -203,6 +203,132 @@
 
 
 
+<!--Why Choose Us-->
+<section class="why-choose-section">
+    <div class="container">
+        <div class="whytitlerow">
+            <!-- Section Title with Background Hollow Text -->
+            <div class="col-12 text-center">
+                <h1 class="why-title">
+                    Why Choose GIGI BUYS HOMES?
+                    <span class="hollow-text">WHY</span>
+                </h1>
+                <p>We simplify the home-selling process for you.</p>
+            </div>
+        </div>
+        <div class="whytitlerow">
+            <!-- Icon Cards - First Row -->
+            <div class="col-lg-4 col-md-6 col-sm-12 icon-box">
+                <div class="icon-wrapper">
+                    <img src="No Fees or Commissions.svg" alt="No Fees or Commissions" class="icon" />
+                </div>
+                <h3>No Fees or Commissions</h3>
+                <p>Sell your home without paying agent commissions or hidden fees, keeping 100% of the offer.</p>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12 icon-box">
+                <div class="icon-wrapper">
+                    <img src="Sell As Is.svg" alt="Sell As-Is" class="icon" />
+                </div>
+                <h3>Sell As-Is</h3>
+                <p>We buy homes in any condition, saving you time and money on repairs or renovations.</p>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12 icon-box">
+                <div class="icon-wrapper">
+                    <img src="No Fees or Commissions.svg" alt="Flexible Closings" class="icon" />
+                </div>
+                <h3>Flexible Closings</h3>
+                <p>Close in as little as 7 days, or pick a date that suits your schedule and lifestyle.</p>
+            </div>
+        </div>
+        <div class="whytitlerow">
+            <!-- Icon Cards - Second Row -->
+            <div class="col-lg-4 col-md-6 col-sm-12 icon-box">
+                <div class="icon-wrapper">
+                    <img src="Cash Offer in 24 Hours.svg" alt="Cash Offer in 24 Hours" class="icon" />
+                </div>
+                <h3>Cash Offer in 24 Hours</h3>
+                <p>Get a competitive cash offer based on your home’s true value, with no low-ball deals.</p>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12 icon-box">
+                <div class="icon-wrapper">
+                    <img src="No Obligation.svg" alt="No Obligations" class="icon" />
+                </div>
+                <h3>No Obligations</h3>
+                <p>You are never obligated to accept our offer—decide on your terms with zero pressure.</p>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12 icon-box">
+                <div class="icon-wrapper">
+                    <img src="Local Expertise.svg" alt="Local Expertise" class="icon" />
+                </div>
+                <h3>Local Expertise</h3>
+                <p>Our deep local market knowledge ensures you receive the best possible cash offer.</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+
+
+<section class="custom-offer-section">
+    <div class="container">
+        <div class="row text-center">
+            <div class="col-12">
+                <h2 class="custom-offer-title">How We Calculate Your Offer</h2>
+                <span class="custom-hollow-text">HOW</span>
+                <p>Our transparent process ensures you get a fair deal.</p>
+            </div>
+        </div>
+        <div class="row custom-offer-row">
+            <!-- Box 1 -->
+            <div class="col-lg-3 col-md-6 col-sm-12 custom-offer-box">
+                <div class="custom-box-content" style="background-image: url('path/to/your-image1.jpg');">
+                    <div class="custom-icon-wrapper">
+                        <img src="Property Condition.svg" alt="Property Condition" class="custom-offer-icon">
+                    </div>
+                    <h3>Property Condition</h3>
+                    <p class="custom-description">
+                        We assess any needed repairs or updates, factoring in costs like roofing, HVAC, or cosmetic fixes.
+                    </p>
+                </div>
+            </div>
+            <!-- Box 2 -->
+            <div class="col-lg-3 col-md-6 col-sm-12 custom-offer-box">
+                <div class="custom-box-content" style="background-image: url('path/to/your-image2.jpg');">
+                    <div class="custom-icon-wrapper">
+                        <img src="Market Comparisons.svg" alt="Market Comparisons" class="custom-offer-icon">
+                    </div>
+                    <h3>Market Comparisons</h3>
+                    <p class="custom-description">We analyze market trends to offer you a competitive price for your home.</p>
+                </div>
+            </div>
+            <!-- Box 3 -->
+            <div class="col-lg-3 col-md-6 col-sm-12 custom-offer-box">
+                <div class="custom-box-content" style="background-image: url('path/to/your-image3.jpg');">
+                    <div class="custom-icon-wrapper">
+                        <img src="Home Size and Features.svg" alt="Home Size and Features" class="custom-offer-icon">
+                    </div>
+                    <h3>Home Size and Features</h3>
+                    <p class="custom-description">The size, layout, and features of your home impact the offer we make.</p>
+                </div>
+            </div>
+            <!-- Box 4 -->
+            <div class="col-lg-3 col-md-6 col-sm-12 custom-offer-box">
+                <div class="custom-box-content" style="background-image: url('path/to/your-image4.jpg');">
+                    <div class="custom-icon-wrapper">
+                        <img src="Local Expertise.svg" alt="Location Factors" class="custom-offer-icon">
+                    </div>
+                    <h3>Location Factors</h3>
+                    <p class="custom-description">Your home's location, neighborhood, and local amenities affect its value.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
