--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-black fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="GIGI Logo.svg" alt="GIGI Buys Homes" class="logo">
+                <img src="assests/GIGI Logo.svg" alt="GIGI Buys Homes" class="logo">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -70,7 +70,7 @@
         </div>
 <!-- Centered Overlay Hero Image -->
 <div class="hero-overlay">
-    <img src="Hero Image.png" alt="Hero Image" class="center-hero-image">
+    <img src="assests/Hero Image.png" alt="Hero Image" class="center-hero-image">
 </div>
         <!-- Hero Content -->
         <div class="container hero-content">
@@ -83,7 +83,7 @@
                 
                     <!-- Arrow Image -->
                     <div class="arrow-container">
-                        <img src="Curved Arrow.svg" alt="Curved Arrow" class="arrow-svg">
+                        <img src="assests/Curved Arrow.svg" alt="Curved Arrow" class="arrow-svg">
                     </div>
                 
                     <p style="font-family: inter;">
@@ -174,7 +174,7 @@
                         <!-- First Slide -->
                         <div class="carousel-item active">
                             <div class="carousel-image-wrapper">
-                                <img src="Hero Image.png" class="d-block w-100" alt="Townhouses">
+                                <img src="assests/Hero Image.png" class="d-block w-100" alt="Townhouses">
                                 <div class="overlay"></div>
                                 <p class="carousel-text">Townhouses</p>
                                 <a href="townhouses.html" class="carousel-btn"><span class="carousel-arrow">→</span></a>
@@ -183,7 +183,7 @@
                         <!-- Second Slide -->
                         <div class="carousel-item">
                             <div class="carousel-image-wrapper">
-                                <img src="Hero Image.png" class="d-block w-100" alt="Luxury Villa">
+                                <img src="assests/Hero Image.png" class="d-block w-100" alt="Luxury Villa">
                                 <div class="overlay"></div>
                                 <p class="carousel-text">Luxury Villa</p>
                                 <a href="luxury-villa.html" class="carousel-btn"><span class="carousel-arrow">→</span></a>
@@ -220,21 +220,21 @@
             <!-- Icon Cards - First Row -->
             <div class="col-lg-4 col-md-6 col-sm-12 icon-box">
                 <div class="icon-wrapper">
-                    <img src="No Fees or Commissions.svg" alt="No Fees or Commissions" class="icon" />
+                    <img src="assests/No Fees or Commissions.svg" alt="No Fees or Commissions" class="icon" />
                 </div>
                 <h3>No Fees or Commissions</h3>
                 <p>Sell your home without paying agent commissions or hidden fees, keeping 100% of the offer.</p>
             </div>
             <div class="col-lg-4 col-md-6 col-sm-12 icon-box">
                 <div class="icon-wrapper">
-                    <img src="Sell As Is.svg" alt="Sell As-Is" class="icon" />
+                    <img src="assests/Sell As Is.svg" alt="Sell As-Is" class="icon" />
                 </div>
                 <h3>Sell As-Is</h3>
                 <p>We buy homes in any condition, saving you time and money on repairs or renovations.</p>
             </div>
             <div class="col-lg-4 col-md-6 col-sm-12 icon-box">
                 <div class="icon-wrapper">
-                    <img src="No Fees or Commissions.svg" alt="Flexible Closings" class="icon" />
+                    <img src="assests/No Fees or Commissions.svg" alt="Flexible Closings" class="icon" />
                 </div>
                 <h3>Flexible Closings</h3>
                 <p>Close in as little as 7 days, or pick a date that suits your schedule and lifestyle.</p>
@@ -244,21 +244,21 @@
             <!-- Icon Cards - Second Row -->
             <div class="col-lg-4 col-md-6 col-sm-12 icon-box">
                 <div class="icon-wrapper">
-                    <img src="Cash Offer in 24 Hours.svg" alt="Cash Offer in 24 Hours" class="icon" />
+                    <img src="assests/Cash Offer in 24 Hours.svg" alt="Cash Offer in 24 Hours" class="icon" />
                 </div>
                 <h3>Cash Offer in 24 Hours</h3>
                 <p>Get a competitive cash offer based on your home’s true value, with no low-ball deals.</p>
             </div>
             <div class="col-lg-4 col-md-6 col-sm-12 icon-box">
                 <div class="icon-wrapper">
-                    <img src="No Obligation.svg" alt="No Obligations" class="icon" />
+                    <img src="assests/No Obligation.svg" alt="No Obligations" class="icon" />
                 </div>
                 <h3>No Obligations</h3>
                 <p>You are never obligated to accept our offer—decide on your terms with zero pressure.</p>
             </div>
             <div class="col-lg-4 col-md-6 col-sm-12 icon-box">
                 <div class="icon-wrapper">
-                    <img src="Local Expertise.svg" alt="Local Expertise" class="icon" />
+                    <img src="assests/Local Expertise.svg" alt="Local Expertise" class="icon" />
                 </div>
                 <h3>Local Expertise</h3>
                 <p>Our deep local market knowledge ensures you receive the best possible cash offer.</p>
@@ -269,62 +269,131 @@
 
 
 
-
-<section class="custom-offer-section">
+<!--Offer Calculation Section-->
+<!-- Offer Calculation Section -->
+<section class="offer-calc-section">
     <div class="container">
         <div class="row text-center">
             <div class="col-12">
-                <h2 class="custom-offer-title">How We Calculate Your Offer</h2>
-                <span class="custom-hollow-text">HOW</span>
+                <h2 class="offer-calc-title">How We Calculate Your Offer</h2>
+                <span class="offer-hollow-text">HOW</span>
                 <p>Our transparent process ensures you get a fair deal.</p>
             </div>
         </div>
-        <div class="row custom-offer-row">
+        <div class="row offer-calc-row">
             <!-- Box 1 -->
-            <div class="col-lg-3 col-md-6 col-sm-12 custom-offer-box">
-                <div class="custom-box-content" style="background-image: url('path/to/your-image1.jpg');">
-                    <div class="custom-icon-wrapper">
-                        <img src="Property Condition.svg" alt="Property Condition" class="custom-offer-icon">
+            <div class="col-lg-3 col-md-6 col-sm-12 offer-calc-box">
+                <div class="offer-calc-content" data-hover-image="assets/property-condition-bg.jpg">
+                    <div class="offer-icon-wrapper">
+                        <img src="assests/Property Condition.svg" alt="Property Condition" class="offer-calc-icon">
                     </div>
+                    <div class="offer-divider"></div>
                     <h3>Property Condition</h3>
-                    <p class="custom-description">
-                        We assess any needed repairs or updates, factoring in costs like roofing, HVAC, or cosmetic fixes.
-                    </p>
+                    <p class="offer-description">We assess any needed repairs or updates, factoring in costs like roofing, HVAC, or cosmetic fixes.</p>
                 </div>
             </div>
             <!-- Box 2 -->
-            <div class="col-lg-3 col-md-6 col-sm-12 custom-offer-box">
-                <div class="custom-box-content" style="background-image: url('path/to/your-image2.jpg');">
-                    <div class="custom-icon-wrapper">
-                        <img src="Market Comparisons.svg" alt="Market Comparisons" class="custom-offer-icon">
+            <div class="col-lg-3 col-md-6 col-sm-12 offer-calc-box">
+                <div class="offer-calc-content" data-hover-image="assets/market-comparison-bg.jpg">
+                    <div class="offer-icon-wrapper">
+                        <img src="assests/Market Comparisons.svg" alt="Market Comparisons" class="offer-calc-icon">
                     </div>
+                    <div class="offer-divider"></div>
                     <h3>Market Comparisons</h3>
-                    <p class="custom-description">We analyze market trends to offer you a competitive price for your home.</p>
+                    <p class="offer-description">We analyze market trends to offer you a competitive price for your home.</p>
                 </div>
             </div>
             <!-- Box 3 -->
-            <div class="col-lg-3 col-md-6 col-sm-12 custom-offer-box">
-                <div class="custom-box-content" style="background-image: url('path/to/your-image3.jpg');">
-                    <div class="custom-icon-wrapper">
-                        <img src="Home Size and Features.svg" alt="Home Size and Features" class="custom-offer-icon">
+            <div class="col-lg-3 col-md-6 col-sm-12 offer-calc-box">
+                <div class="offer-calc-content" data-hover-image="assets/home-size-features-bg.jpg">
+                    <div class="offer-icon-wrapper">
+                        <img src="assests/Home Size and Features.svg" alt="Home Size and Features" class="offer-calc-icon">
                     </div>
+                    <div class="offer-divider"></div>
                     <h3>Home Size and Features</h3>
-                    <p class="custom-description">The size, layout, and features of your home impact the offer we make.</p>
+                    <p class="offer-description">The size, layout, and features of your home impact the offer we make.</p>
                 </div>
             </div>
             <!-- Box 4 -->
-            <div class="col-lg-3 col-md-6 col-sm-12 custom-offer-box">
-                <div class="custom-box-content" style="background-image: url('path/to/your-image4.jpg');">
-                    <div class="custom-icon-wrapper">
-                        <img src="Local Expertise.svg" alt="Location Factors" class="custom-offer-icon">
+            <div class="col-lg-3 col-md-6 col-sm-12 offer-calc-box">
+                <div class="offer-calc-content" data-hover-image="assets/location-factors-bg.jpg">
+                    <div class="offer-icon-wrapper">
+                        <img src="assests/Location Factor.svg" alt="Location Factors" class="offer-calc-icon">
                     </div>
+                    <div class="offer-divider"></div>
                     <h3>Location Factors</h3>
-                    <p class="custom-description">Your home's location, neighborhood, and local amenities affect its value.</p>
+                    <p class="offer-description">Your home's location, neighborhood, and local amenities affect its value.</p>
                 </div>
             </div>
         </div>
     </div>
 </section>
+
+
+
+
+
+
+
+
+<!--Our Process-->
+<!--Our Process-->
+<section class="custom-process-section">
+    <div class="container-fluid custom-process-container">
+        <div class="row justify-content-center">
+            <!-- Black Box (Containing Title, Subtitle, and Steps) -->
+            <div class="col-10 custom-process-black-box">
+                <!-- Title and Hollow Text Inside Black Box -->
+                <div class="row text-center">
+                    <div class="col-12">
+                        <h2 class="custom-process-title">Our Process</h2>
+                        <span class="custom-hollow-text">PROCESS</span>
+                        <p class="custom-process-subtitle">Our Simple 4-Step Process</p>
+                    </div>
+                </div>
+
+                <!-- Steps -->
+                <div class="row custom-process-row">
+                    <!-- Step 1 -->
+                    <div class="col-lg-6 col-md-6 col-sm-12 custom-process-box">
+                        <div class="custom-box-content">
+                            <div class="custom-step-label">Step 1</div>
+                            <h3>Contact Us</h3>
+                            <p>Reach out to us by filling out our quick online form or giving us a call. We’ll gather basic information about your property to start the process. No hassle, no long paperwork—just a simple way to begin.</p>
+                        </div>
+                    </div>
+                    <!-- Step 2 -->
+                    <div class="col-lg-6 col-md-6 col-sm-12 custom-process-box">
+                        <div class="custom-box-content">
+                            <div class="custom-step-label">Step 2</div>
+                            <h3>Get Your Cash Offer</h3>
+                            <p>Within 24 hours of contacting us, we’ll evaluate your property and present you with a fair, no-obligation cash offer. We use local market data and the condition of your home to give you the best possible price.</p>
+                        </div>
+                    </div> <br>
+                    <!-- Step 3 -->
+                    <div class="col-lg-6 col-md-6 col-sm-12 custom-process-box">
+                        <div class="custom-box-content">
+                            <div class="custom-step-label">Step 3</div>
+                            <h3>Accept the Offer</h3>
+                            <p>Once you’ve reviewed the offer, you’re free to accept it with no pressure. We’ll work with you to schedule a closing date that suits your timeline, whether you need to move quickly or prefer to take your time.</p>
+                        </div>
+                    </div>
+                    <!-- Step 4 -->
+                    <div class="col-lg-6 col-md-6 col-sm-12 custom-process-box">
+                        <div class="custom-box-content">
+                            <div class="custom-step-label">Step 4</div>
+                            <h3>Close and Get Paid</h3>
+                            <p>On closing day, we handle all the paperwork and final details. Once everything is signed, you’ll receive your cash payment. It’s fast, simple, and stress-free.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+
 
 
 
