--- a/index.html
+++ b/index.html
@@ -396,6 +396,177 @@
 
 
 
+<!-- Solving Various Housing Situations Section -->
+<section class="unique-housing-situations-section">
+    <div class="container-fluid text-center">
+        <h2 class="unique-housing-title">Solving Various Housing Situations</h2>
+        <span class="unique-hollow-text">SITUATION</span>
+        <p class="unique-housing-subtitle">Our Simple 4-Step Process</p>
+
+        <div class="row justify-content-center">
+            <!-- Each Image Box with Caption -->
+            <div class="col-lg-4 col-md-6 col-sm-12 unique-housing-box">
+                <a href="facing-foreclosure.html" target="_blank" class="unique-housing-link">
+                    <div class="unique-housing-image-wrapper">
+                        <img src="assests/Facing Foreclosure.svg" alt="Facing Foreclosure" class="unique-housing-image">
+                    </div>
+                    <h3 class="unique-housing-caption">Facing Foreclosure</h3>
+                </a>
+            </div>
+
+            <div class="col-lg-4 col-md-6 col-sm-12 unique-housing-box">
+                <a href="divorce-or-separation.html" target="_blank" class="unique-housing-link">
+                    <div class="unique-housing-image-wrapper">
+                        <img src="assests/Divorce or Separation.svg" alt="Divorce or Separation" class="unique-housing-image">
+                    </div>
+                    <h3 class="unique-housing-caption">Divorce or Separation</h3>
+                </a>
+            </div>
+
+            <div class="col-lg-4 col-md-6 col-sm-12 unique-housing-box">
+                <a href="inherited-property.html" target="_blank" class="unique-housing-link">
+                    <div class="unique-housing-image-wrapper">
+                        <img src="assests/Inherited Property.svg" alt="Inherited Property" class="unique-housing-image">
+                    </div>
+                    <h3 class="unique-housing-caption">Inherited Property</h3>
+                </a>
+            </div>
+
+            <div class="col-lg-4 col-md-6 col-sm-12 unique-housing-box">
+                <a href="financial-difficulties.html" target="_blank" class="unique-housing-link">
+                    <div class="unique-housing-image-wrapper">
+                        <img src="assests/Financial Difficulties.svg" alt="Financial Difficulties" class="unique-housing-image">
+                    </div>
+                    <h3 class="unique-housing-caption">Financial Difficulties</h3>
+                </a>
+            </div>
+
+            <div class="col-lg-4 col-md-6 col-sm-12 unique-housing-box">
+                <a href="relocation.html" target="_blank" class="unique-housing-link">
+                    <div class="unique-housing-image-wrapper">
+                        <img src="assests/Relocation.svg" alt="Relocation" class="unique-housing-image">
+                    </div>
+                    <h3 class="unique-housing-caption">Relocation</h3>
+                </a>
+            </div>
+
+            <div class="col-lg-4 col-md-6 col-sm-12 unique-housing-box">
+                <a href="homes-needing-repairs.html" target="_blank" class="unique-housing-link">
+                    <div class="unique-housing-image-wrapper">
+                        <img src="assests/Homes Needing Repairs.svg" alt="Homes Needing Repairs" class="unique-housing-image">
+                    </div>
+                    <h3 class="unique-housing-caption">Homes Needing Repairs</h3>
+                </a>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+
+
+
+
+
+<!-- About Us Section -->
+<section class="about-section-custom">
+    <div class="container">
+        <!-- Hollow Text and Title on the Left -->
+        <div class="about-header-left">
+            <h1 class="about-hollow-text">ABOUT</h1>
+            <h2 class="about-title">About Us</h2>
+            <p class="about-subtitle">
+                We specialize in buying homes as-is, meaning there’s no need for costly repairs or long waits for the right buyer.
+                Whether you’re facing foreclosure, relocating, or simply want to sell your home without the hassle, our experienced
+                team is here to offer you a competitive cash offer within 24 hours.
+            </p>
+        </div>
+
+        <!-- Image Row -->
+        <div class="about-image-row">
+            <!-- First Image Box with Bullet Points -->
+            <div class="about-image-box">
+                <!-- <a href="#" class="about-image-link"> -->
+                    <div class="about-image-wrapper">
+                        <img src="assests/About Us 1.svg" alt="Modern House" class="about-image" />
+                        <div class="about-shine-effect"></div>
+                    </div>
+                </a>
+                <ul class="about-bullet-points">
+                    <li>Quality Architect Designs Private Security</li>
+                    <li>100% Satisfaction Private Security Guarantee</li>
+                </ul>
+            </div>
+
+            <!-- Second Image Box with Bullet Points -->
+            <div class="about-image-box">
+                <!-- <a href="#" class="about-image-link"> -->
+                    <div class="about-image-wrapper">
+                        <img src="assests/About Us 2.svg" alt="Beautiful House" class="about-image" />
+                        <div class="about-shine-effect"></div>
+                    </div>
+                </a>
+                <ul class="about-bullet-points">
+                    <li>Highly Private Security Professional Members</li>
+                    <li>Private Security Deliver Always on Time</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+
+
+
+<section class="comparison-section">
+    <div class="comparison-container">
+        <!-- Hollow Text, Title, and Subtitle -->
+        <div class="comparison-header">
+            <h1 class="comparison-title">
+                <span class="title-part-black">GIGI BUYS HOMES v</span><span class="title-part-yellow">s. Traditional Realtor</span>
+            </h1>
+        </div>
+        
+
+        <!-- Left Side (GIGI Buys Homes) -->
+        <div class="comparison-column comparison-left">
+            <ul class="comparison-list">
+                <li>✔  Get a cash offer within 24 hours.</li>
+                <li>✔  No repairs or renovations needed. We buy homes as-is.</li>
+                <li>✔  No realtor commissions or hidden fees.</li>
+                <li>✔  Flexible closing dates — close in as little as 7 days.</li>
+                <li>✔  Stress-free, no-obligation process with minimal paperwork.</li>
+                <li>✔  Cash offer, no financing delays.</li>
+                <li>✔  No need for showings or open houses.</li>
+                <li>✔  We buy homes in any condition, even if they need repairs.</li>
+                <li>✔  Guaranteed sale with cash.</li>
+            </ul>
+        </div>
+
+        <!-- Center Image -->
+        <div class="comparison-center-image">
+            <img src="assests/Comparison Image.svg" alt="House Comparison">
+        </div>
+
+        <!-- Right Side (Traditional Realtor) -->
+        <div class="comparison-column comparison-right">
+            <ul class="comparison-list">
+                <li>Weeks to months for offers.</li>
+                <li>Requires repairs and staging to attract buyers.</li>
+                <li>5-6% realtor commission plus fees.</li>
+                <li>Typically takes 30-60 days.</li>
+                <li>Complicated with multiple steps.</li>
+                <li>Relies on buyer’s financing approval.</li>
+                <li>Multiple showings and open houses required.</li>
+                <li>Home must be market-ready.</li>
+                <li>Sale may fall through due to contingencies.</li>
+            </ul>
+        </div>
+    </div>
+</section>
+
+
 
 
 
