--- a/index.html
+++ b/index.html
@@ -532,15 +532,15 @@
         <!-- Left Side (GIGI Buys Homes) -->
         <div class="comparison-column comparison-left">
             <ul class="comparison-list">
-                <li>✔  Get a cash offer within 24 hours.</li>
-                <li>✔  No repairs or renovations needed. We buy homes as-is.</li>
-                <li>✔  No realtor commissions or hidden fees.</li>
-                <li>✔  Flexible closing dates — close in as little as 7 days.</li>
-                <li>✔  Stress-free, no-obligation process with minimal paperwork.</li>
-                <li>✔  Cash offer, no financing delays.</li>
-                <li>✔  No need for showings or open houses.</li>
-                <li>✔  We buy homes in any condition, even if they need repairs.</li>
-                <li>✔  Guaranteed sale with cash.</li>
+                <li>✔ Get a cash offer within 24 hours.</li>
+                <li>✔ No repairs or renovations needed. We buy homes as-is.</li>
+                <li>✔ No realtor commissions or hidden fees.</li>
+                <li>✔ Flexible closing dates — close in as little as 7 days.</li>
+                <li>✔ Stress-free, no-obligation process with minimal paperwork.</li>
+                <li>✔ Cash offer, no financing delays.</li>
+                <li>✔ No need for showings or open houses.</li>
+                <li>✔ We buy homes in any condition, even if they need repairs.</li>
+                <li>✔ Guaranteed sale with cash.</li>
             </ul>
         </div>
 
@@ -552,13 +552,13 @@
         <!-- Right Side (Traditional Realtor) -->
         <div class="comparison-column comparison-right">
             <ul class="comparison-list">
-                <li>Weeks to months for offers.</li>
-                <li>Requires repairs and staging to attract buyers.</li>
-                <li>5-6% realtor commission plus fees.</li>
-                <li>Typically takes 30-60 days.</li>
-                <li>Complicated with multiple steps.</li>
-                <li>Relies on buyer’s financing approval.</li>
-                <li>Multiple showings and open houses required.</li>
+                <li>✔ Weeks to months for offers.</li>
+                <li>✔ Requires repairs and staging to attract buyers.</li>
+                <li>✔ 5-6% realtor commission plus fees.</li>
+                <li>✔ Typically takes 30-60 days.</li>
+                <li>✔ Complicated with multiple steps.</li>
+                <li>✔ Relies on buyer’s financing approval.</li>
+                <li>✔ Multiple showings and open houses required.</li>
                 <li>Home must be market-ready.</li>
                 <li>Sale may fall through due to contingencies.</li>
             </ul>
