--- a/index.html
+++ b/index.html
@@ -559,8 +559,8 @@
                 <li>✔ Complicated with multiple steps.</li>
                 <li>✔ Relies on buyer’s financing approval.</li>
                 <li>✔ Multiple showings and open houses required.</li>
-                <li>Home must be market-ready.</li>
-                <li>Sale may fall through due to contingencies.</li>
+                <li>✔ Home must be market-ready.</li>
+                <li>✔ Sale may fall through due to contingencies.</li>
             </ul>
         </div>
     </div>
