--- a/index.html
+++ b/index.html
@@ -532,15 +532,15 @@
         <!-- Left Side (GIGI Buys Homes) -->
         <div class="comparison-column comparison-left">
             <ul class="comparison-list">
-                <li>✔ Get a cash offer within 24 hours.</li>
-                <li>✔ No repairs or renovations needed. We buy homes as-is.</li>
-                <li>✔ No realtor commissions or hidden fees.</li>
-                <li>✔ Flexible closing dates — close in as little as 7 days.</li>
-                <li>✔ Stress-free, no-obligation process with minimal paperwork.</li>
-                <li>✔ Cash offer, no financing delays.</li>
-                <li>✔ No need for showings or open houses.</li>
-                <li>✔ We buy homes in any condition, even if they need repairs.</li>
-                <li>✔ Guaranteed sale with cash.</li>
+                <li>Get a cash offer within 24 hours.</li>
+                <li>No repairs or renovations needed. We buy homes as-is.</li>
+                <li>No realtor commissions or hidden fees.</li>
+                <li>Flexible closing dates — close in as little as 7 days.</li>
+                <li>Stress-free, no-obligation process with minimal paperwork.</li>
+                <li>Cash offer, no financing delays.</li>
+                <li>No need for showings or open houses.</li>
+                <li>We buy homes in any condition, even if they need repairs.</li>
+                <li>Guaranteed sale with cash.</li>
             </ul>
         </div>
 
@@ -552,19 +552,110 @@
         <!-- Right Side (Traditional Realtor) -->
         <div class="comparison-column comparison-right">
             <ul class="comparison-list">
-                <li>✔ Weeks to months for offers.</li>
-                <li>✔ Requires repairs and staging to attract buyers.</li>
-                <li>✔ 5-6% realtor commission plus fees.</li>
-                <li>✔ Typically takes 30-60 days.</li>
-                <li>✔ Complicated with multiple steps.</li>
-                <li>✔ Relies on buyer’s financing approval.</li>
-                <li>✔ Multiple showings and open houses required.</li>
-                <li>✔ Home must be market-ready.</li>
-                <li>✔ Sale may fall through due to contingencies.</li>
+                <li>Weeks to months for offers.</li>
+                <li>Requires repairs and staging to attract buyers.</li>
+                <li>5-6% realtor commission plus fees.</li>
+                <li>Typically takes 30-60 days.</li>
+                <li>Complicated with multiple steps.</li>
+                <li>Relies on buyer’s financing approval.</li>
+                <li>Multiple showings and open houses required.</li>
+                <li>Home must be market-ready.</li>
+                <li>Sale may fall through due to contingencies.</li>
             </ul>
         </div>
     </div>
 </section>
+
+
+
+
+
+
+<!-- Client Feedback Section -->
+<section class="client-feedback-section">
+    <div class="feedback-container">
+        <!-- Left Section with Text, Hollow Text, Title, Subtitle, Description, and Video -->
+        <div class="feedback-left">
+            <div class="feedback-hollow-text">FEEDBACK</div>
+            <h2 class="feedback-subtitle">Client Feedback</h2>
+            <h1 class="feedback-title">Hear What Our Client Say About Property</h1>
+            <p class="feedback-description">
+                Indulge in the epitome of luxury living at Luxury, where every amenity is meticulously designed to elevate your lifestyle.
+            </p>
+            <div class="video-thumbnail" onclick="openVideo()">
+                <img src="image.png" alt="Client Testimonial Video">
+                <div class="play-button">&#9658;</div>
+            </div>
+        </div>
+
+        <!-- Right Section with Vertical Carousel -->
+        <div class="feedback-right">
+            <div class="carousel-container">
+                <div class="carousel-slide">
+                    <!-- Feedback Cards (Only two visible at a time) -->
+                    <div class="feedback-card">
+                        <div class="client-info">
+                            <img src="assets/client1.jpg" alt="Client 1">
+                            <h3>Sarah P.</h3>
+                            <p>Happy Client</p>
+                        </div>
+                        <p class="feedback-text">A Lifesaver During Tough Times. GIGI BUYS HOMES helped me sell quickly...<br>⭐️⭐️⭐️⭐️⭐️</p>
+                    </div>
+                    <div class="feedback-card">
+                        <div class="client-info">
+                            <img src="assets/client2.jpg" alt="Client 2">
+                            <h3>Emily</h3>
+                            <p>Happy Client</p>
+                        </div>
+                        <p class="feedback-text">Fast and Fair! I received a fair offer within 24 hours...<br>⭐️⭐️⭐️⭐️⭐️</p>
+                    </div>
+                    <div class="feedback-card">
+                        <div class="client-info">
+                            <img src="assets/client3.jpg" alt="Client 3">
+                            <h3>Michael R.</h3>
+                            <p>Happy Client</p>
+                        </div>
+                        <p class="feedback-text">Effortless Process. GIGI BUYS HOMES made the process stress-free...<br>⭐️⭐️⭐️⭐️⭐️</p>
+                    </div>
+                    <div class="feedback-card">
+                        <div class="client-info">
+                            <img src="assets/client4.jpg" alt="Client 4">
+                            <h3>Ana K.</h3>
+                            <p>Happy Client</p>
+                        </div>
+                        <p class="feedback-text">Professional and Transparent...<br>⭐️⭐️⭐️⭐️⭐️</p>
+                    </div>
+                    <div class="feedback-card">
+                        <div class="client-info">
+                            <img src="assets/client5.jpg" alt="Client 5">
+                            <h3>John D.</h3>
+                            <p>Happy Client</p>
+                        </div>
+                        <p class="feedback-text">Highly Recommended! The process was straightforward...<br>⭐️⭐️⭐️⭐️⭐️</p>
+                    </div>
+                </div>
+            </div>
+            <!-- Navigation Buttons -->
+            <div class="carousel-navigation">
+                <div class="carousel-prev" onclick="showPrevFeedback()">&#9650;</div>
+                <div class="carousel-next" onclick="showNextFeedback()">&#9660;</div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Video Overlay -->
+<div id="videoOverlay" class="video-overlay">
+    <div class="video-overlay-content">
+        <span class="close" onclick="closeVideo()">&times;</span>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/eDqfg_LexCQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    </div>
+</div>
+
+
+
+
+
 
 
 
