--- a/index.html
+++ b/index.html
@@ -572,9 +572,11 @@
 
 
 <!-- Client Feedback Section -->
-<section class="client-feedback-section">
+<!-- Client Feedback Section -->
+<section class="client-feedback">
     <div class="feedback-container">
-        <!-- Left Section with Text, Hollow Text, Title, Subtitle, Description, and Video -->
+        
+        <!-- Left Section: Text, Title, and Video -->
         <div class="feedback-left">
             <div class="feedback-hollow-text">FEEDBACK</div>
             <h2 class="feedback-subtitle">Client Feedback</h2>
@@ -583,64 +585,69 @@
                 Indulge in the epitome of luxury living at Luxury, where every amenity is meticulously designed to elevate your lifestyle.
             </p>
             <div class="video-thumbnail" onclick="openVideo()">
-                <img src="image.png" alt="Client Testimonial Video">
+                <img src="YT Thumbnail.svg" alt="Client Testimonial Video">
                 <div class="play-button">&#9658;</div>
             </div>
         </div>
 
-        <!-- Right Section with Vertical Carousel -->
-        <div class="feedback-right">
-            <div class="carousel-container">
-                <div class="carousel-slide">
-                    <!-- Feedback Cards (Only two visible at a time) -->
-                    <div class="feedback-card">
-                        <div class="client-info">
-                            <img src="assets/client1.jpg" alt="Client 1">
-                            <h3>Sarah P.</h3>
-                            <p>Happy Client</p>
-                        </div>
-                        <p class="feedback-text">A Lifesaver During Tough Times. GIGI BUYS HOMES helped me sell quickly...<br>⭐️⭐️⭐️⭐️⭐️</p>
-                    </div>
-                    <div class="feedback-card">
-                        <div class="client-info">
-                            <img src="assets/client2.jpg" alt="Client 2">
-                            <h3>Emily</h3>
-                            <p>Happy Client</p>
-                        </div>
-                        <p class="feedback-text">Fast and Fair! I received a fair offer within 24 hours...<br>⭐️⭐️⭐️⭐️⭐️</p>
-                    </div>
-                    <div class="feedback-card">
-                        <div class="client-info">
-                            <img src="assets/client3.jpg" alt="Client 3">
-                            <h3>Michael R.</h3>
-                            <p>Happy Client</p>
-                        </div>
-                        <p class="feedback-text">Effortless Process. GIGI BUYS HOMES made the process stress-free...<br>⭐️⭐️⭐️⭐️⭐️</p>
-                    </div>
-                    <div class="feedback-card">
-                        <div class="client-info">
-                            <img src="assets/client4.jpg" alt="Client 4">
-                            <h3>Ana K.</h3>
-                            <p>Happy Client</p>
-                        </div>
-                        <p class="feedback-text">Professional and Transparent...<br>⭐️⭐️⭐️⭐️⭐️</p>
-                    </div>
-                    <div class="feedback-card">
-                        <div class="client-info">
-                            <img src="assets/client5.jpg" alt="Client 5">
-                            <h3>John D.</h3>
-                            <p>Happy Client</p>
-                        </div>
-                        <p class="feedback-text">Highly Recommended! The process was straightforward...<br>⭐️⭐️⭐️⭐️⭐️</p>
-                    </div>
+        <!-- Right Section: Carousel -->
+        <!-- Right Section: Carousel -->
+<div class="feedback-right">
+    <div class="carousel-container">
+        <div class="carousel-slide">
+            <!-- Feedback Card 1 -->
+            <div class="feedback-card">
+                <div class="client-info">
+                    <img src="assets/Testimonial1.png" alt="Client 1">
+                    <h3>Sarah P.</h3>
+                    <p>Happy Client</p>
                 </div>
+                <p class="feedback-text"><b>A Lifesaver During Tough Times.</b> <br> After inheriting a home I couldn’t keep, GIGI BUYS HOMES helped me sell it quickly and without hassle. Their team was professional and transparent throughout the entire process.<br>⭐️⭐️⭐️⭐️⭐️</p>
             </div>
-            <!-- Navigation Buttons -->
-            <div class="carousel-navigation">
-                <div class="carousel-prev" onclick="showPrevFeedback()">&#9650;</div>
-                <div class="carousel-next" onclick="showNextFeedback()">&#9660;</div>
+            <!-- Feedback Card 2 -->
+            <div class="feedback-card">
+                <div class="client-info">
+                    <img src="assets/Testimonial2.png" alt="Client 2">
+                    <h3>Emily</h3>
+                    <p>Happy Client</p>
+                </div>
+                <p class="feedback-text"><b>Fast and Fair!</b> <br> I needed to sell my home fast due to relocation, and GIGI made it happen. I received a fair offer within 24 hours and was able to close the deal on my timeline. Excellent service!<br>⭐️⭐️⭐️⭐️⭐️</p>
+            </div>
+            <!-- Feedback Card 3 -->
+            <div class="feedback-card">
+                <div class="client-info">
+                    <img src="assets/Testimonial3.png" alt="Client 3">
+                    <h3>Michael R.</h3>
+                    <p>Happy Client</p>
+                </div>
+                <p class="feedback-text"><b>Effortless Process.</b> <br> GIGI BUYS HOMES made the process stress-free and easy. I couldn’t be happier with the results.<br>⭐️⭐️⭐️⭐️⭐️</p>
+            </div>
+            <!-- Feedback Card 4 -->
+            <div class="feedback-card">
+                <div class="client-info">
+                    <img src="assets/Testimonial4.png" alt="Client 4">
+                    <h3>Ana K.</h3>
+                    <p>Happy Client</p>
+                </div>
+                <p class="feedback-text"><b>Quick and Easy.</b> <br> The team made the selling process quick and easy, and I was able to close on time.<br>⭐️⭐️⭐️⭐️⭐️</p>
+            </div>
+            <!-- Feedback Card 5 -->
+            <div class="feedback-card">
+                <div class="client-info">
+                    <img src="assets/Testimonial5.png" alt="Client 5">
+                    <h3>John D.</h3>
+                    <p>Happy Client</p>
+                </div>
+                <p class="feedback-text"><b>Highly Recommended!</b> <br> The process was straightforward, and I felt supported every step of the way.<br>⭐️⭐️⭐️⭐️⭐️</p>
             </div>
         </div>
+        <!-- Carousel Controls -->
+        <div class="carousel-controls">
+            <div class="carousel-prev">&#9650;</div>
+            <div class="carousel-next">&#9660;</div>
+        </div>
+    </div>
+</div>
     </div>
 </section>
 
@@ -648,9 +655,10 @@
 <div id="videoOverlay" class="video-overlay">
     <div class="video-overlay-content">
         <span class="close" onclick="closeVideo()">&times;</span>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/eDqfg_LexCQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/your-video-id" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
 </div>
+
 
 
 
